<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/loader"
        layout="@layout/progress_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/groupAvatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/changeAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_stroke_gray"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:text="@string/change_group_avatar"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/groupAvatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/deleteAvatar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_stroke_gray"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:text="@string/delete_group_avatar"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/changeAvatar"
                app:layout_constraintStart_toStartOf="@id/changeAvatar"
                app:layout_constraintTop_toBottomOf="@id/changeAvatar" />

            <TextView
                android:id="@+id/label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:text="@string/group_name_label"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deleteAvatar" />

            <EditText
                android:id="@+id/groupName"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_default_item"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label1"
                tools:ignore="Autofill,LabelFor,TextFields" />


            <TextView
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/group_description"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@id/descriptionOfGroup"
                app:layout_constraintTop_toBottomOf="@id/groupName" />

            <EditText
                android:id="@+id/descriptionOfGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_default_item"
                android:gravity="top|start"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:minHeight="150dp"
                android:paddingVertical="8dp"
                android:paddingStart="8dp"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label2"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:text="@string/students"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionOfGroup" />

            <TextView
                android:id="@+id/addStudentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="8dp"
                android:focusable="true"
                android:text="@string/add"
                android:textColor="@color/main_color_pink"
                app:drawableStartCompat="@drawable/ic_plus_main"
                app:layout_constraintEnd_toEndOf="@id/descriptionOfGroup"
                app:layout_constraintTop_toBottomOf="@id/descriptionOfGroup" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/studentsRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/addStudentBtn" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveChanges"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/save_changes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/studentsRV" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>